--- a/_sass/breakpoints/_mobileup.scss
+++ b/_sass/breakpoints/_mobileup.scss
@@ -181,7 +181,7 @@ HEADER STYLING
 
 .header {
 	background-color: $background-color;
-	background-image: url("../img/touring.jpg");
+	background-image: url("../img/berrycreekoutdoors-sandhillcrane-2021-header.jpg");
 	background-size: cover;
 	background-position: center center;
 	color: white;
@@ -206,6 +206,9 @@ HEADER STYLING
 		a {
 			color: white;
 			text-decoration: none;
+			background-color: #2e8b57;
+			padding-left: 8px;
+			padding-right: 8px;
 		}
 	}
 }
